PPXDCS-177 Add possibility to upload artifacts by agents to the server
